[package]
name = "app"
version = "0.1.0"
authors = [""]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
luminance = "0.43.2"
luminance-front = "0.3"
luminance-derive = "0.6"
luminance-web-sys = "0.2"
luminance-windowing = "0.9"
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"
web-sys = { version = "0.3.44", features = ["console"] }


