[package]
name = "egui-luminance"
version = "0.0.0"
authors = [""]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
lto = true
# opt-level = 2
#opt-level = "s"
# opt-level = "z"
# panic = 'abort'
# codegen-units = 1

[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-O4']


[dependencies]
luminance = "0.43.2"
luminance-front = { version = "0.3", no-default-features = true, features = ["webgl2"] }
luminance-derive = "0.6"
luminance-web-sys = "0.2"
luminance-windowing = "0.9"
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"
web-sys = { version = "0.3.44", features = ["console"] }
egui = {version = "0.12.0", features = ["single_threaded"] }
getrandom = { version = "0.2", features = ["js"] }
